# Forfedrediagram

./: .clang-format  .gitignore  CMakeLists.txt  CONVENTION.md  Implement.cpp  README.md  TextStorage_Test1.txt  TextStorage_Test2.txt  TextStorage_Test3.txt  basic_menu_layout.txt
.github/workflows/: config.yml
ATree-API/: CMakeLists.txt  date.hpp  globals.hpp  helpers.hpp  node.hpp  tree.hpp
CLI/: CLI_functions.h  CLI_main.cpp  CMakeLists.txt
CLI/include/: Menu.cpp  Menu.hpp  Person.cpp  Person.hpp
example/: CMakeLists.txt  exampleMain.cpp
examples/: CMakeLists.txt  no_CLI.cpp
examples/CLI-Person/: CLIExample.cpp  CLI_functions.hpp  CMakeLists.txt  menu.cpp  person.cpp
examples/CLI-Person/include/: CLI_functions.h  CLIhelpers.hpp  menu.hpp  person.hpp
examples/NoCLI/: CMakeLists.txt  NoCLIExample.cpp
examples/include/: menu.hpp  person.hpp
include/: AncestorTreeCLI.hpp  Helpers.hpp  Menu.hpp  Node.hpp  Person.hpp  Tree.hpp  UsefulFunctions.hpp  commonFunctions.hpp  date.hpp  familytree_CLI.hpp  globals.hpp  helpers.hpp  json.hpp  menu.hpp  simpleMenu.hpp
include/atree/: AncestorTree.hpp  ancestor_tree.hpp  globals.hpp
include/date/: Date.hpp  date.hpp
include/json/: JsonParser.hpp  json.hpp  jsonParser.hpp
include/menu/: Menu.hpp  menu.hpp
include/person/: Person.hpp  person.hpp
src/: AncestorTreeCLI.cpp  CMakeLists.txt  FamilyTree.cpp  Menu.cpp  Node.hpp  Person.cpp  Person.hpp  Tree.hpp  familytree_CLI.cpp  globals.hpp  main.cpp  newTree.hpp
test/: AnonymTestData.json  FirstTree.json  MartinPerson.json  NewTree.json  catch.hpp  test_file.txt  test_main.cpp  test_person.cpp  test_tree.cpp  test_usefulFunctions.cpp
test_files/: AnonymTestData.json
test_files/hidden/: FirstTree.json
tests/: CMakeLists.txt  TestDate.cpp  TestHelpers.cpp  TestJsonParser.cpp  TestPerson.cpp  TestTree.cpp  catch.hpp  test_commonFunctions.cpp  test_date.cpp  test_helpers.cpp  test_person.cpp  test_tree.cpp  test_usefulFunctions.cpp
